Added advanced query features